[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/ReconBot.tres" type="Material" id=1]
[ext_resource path="res://Enemies/ReconBot.obj" type="ArrayMesh" id=2]
[ext_resource path="res://ReconBot.gd" type="Script" id=3]
[ext_resource path="res://SparkParticles.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.818397, 1.9, 0.357087, -0.803982, 3.10217, -0.22518, -0.803982, 3.20662, 0.34887, -0.800012, 3.09196, 0.5, -0.791474, 2, 0.0015738, -0.789371, 2.2, -0.187611, -0.751714, 2.26688, -0.329626, -0.751714, 2.26688, 0.819006, -0.751714, 2.6323, 0.819006, -0.751714, 3.20662, 0.610116, -0.751714, 3.31106, -0.0162899, -0.751714, 3.31106, 0.140511, -0.64732, 2.16243, -0.329626, -0.64732, 2.16243, 0.819006, -0.64732, 2.26688, -0.434071, -0.64732, 2.26688, 0.923451, -0.64732, 2.6323, -0.434071, -0.64732, 2.6323, 0.923451, -0.64732, 3.31106, 0.714561, -0.595158, 1.95354, -0.0162899, -0.595158, 1.95354, 0.34887, -0.542925, 3.31106, -0.329626, -0.542925, 3.31106, 0.819006, -0.455061, 2.3, -0.372544, -0.455061, 2.3, 0.861924, -0.453107, 2.2, -0.283705, -0.453107, 2.2, 0.773085, -0.447922, 3.27605, -0.3, -0.444543, 3.2886, 0.8, -0.438496, 2.6323, -0.434071, -0.438496, 2.6323, 0.923451 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -1.32611, 2.6844, -0.329646, -1.32611, 2.6844, 0.610177, -1.32611, 3.20651, 0.349095, -1.29891, 3.14125, -2.77556e-17, -1.2216, 1.95354, -0.0163103, -1.2216, 1.95354, 0.349095, -1.2216, 3.10202, -0.225139, -1.2216, 3.10202, 0.50567, -1.1172, 2.16253, -0.225139, -1.1172, 2.16253, 0.50567, -0.960665, 2.6844, -0.329646, -0.960665, 2.6844, 0.610177, -0.960665, 2.9454, -0.329646, -0.960665, 2.9454, 0.610177, -0.831225, 2.0188, 0, -0.831225, 3.14125, 0, -0.82746, 2.2, -0.192347, -0.82746, 2.2, 0.472878, -0.821992, 3.06611, -0.2, -0.808084, 3.09392, 0.5, -0.804033, 3.20651, 0.349095, -0.781725, 1.9, 0.366941 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0.866814, 4.45973, -0.747345, 0.866814, 4.45973, -0.590749, 0.866814, 4.61637, -0.747345, 0.866814, 4.61637, -0.590749, 1.23227, 4.45973, -0.747345, 1.23227, 4.45973, -0.538496, 1.23227, 4.61637, -0.747345, 1.23227, 4.61637, -0.538496 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0.869071, 4.4, -0.801062, 0.871195, 3.9, -0.802478, 0.872788, 3.90531, -0.9, 0.872788, 4.38761, -0.9, 1.02345, 3.88545, -0.903972, 1.02345, 3.88545, -0.799568, 1.02345, 4.40747, -0.903972, 1.02345, 4.40747, -0.799568 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -0.803982, 4.45973, -0.747345, -0.803982, 4.45973, -0.538496, -0.803982, 4.61637, -0.747345, -0.803982, 4.61637, -0.538496, -0.438496, 4.45973, -0.747345, -0.438496, 4.45973, -0.590749, -0.438496, 4.61637, -0.747345, -0.438496, 4.61637, -0.590749 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -0.647345, 3.88545, -0.903972, -0.647345, 3.88545, -0.799568, -0.647345, 4.40747, -0.903972, -0.647345, 4.40747, -0.799568, -0.446441, 3.90531, -0.9, -0.446441, 4.38761, -0.9, -0.444317, 3.9, -0.802478, -0.441485, 4.4, -0.801062 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -0.908361, 1.3792, 0.088002, -0.908361, 1.58808, -0.434071, -0.908361, 1.84904, -0.434071, -0.908361, 1.84904, 0.505752, -0.908361, 1.90133, 0.088002, -0.9, 1.89204, 0.38824, -0.889648, 1.4, 0.372137, -0.883863, 1.5, 0.456747, -0.699506, 1.48367, -0.434071, -0.699506, 1.90133, -0.434071, -0.601428, 1.4, 0.372137, -0.595194, 1.3792, 0.088002, -0.595194, 1.58808, -0.434071, -0.595194, 1.84904, -0.434071, -0.595194, 1.90133, 0.088002, -0.438542, 1.58808, 0.192417, -0.438542, 1.58808, 0.505752, -0.438542, 1.74468, 0.192417, -0.438542, 1.84904, 0.349084, -0.438542, 1.84904, 0.505752 )

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( 0.240266, 4.35544, -1.42611, 0.245049, 4.1, -0.545273, 0.261745, 4.8, -0.568925, 0.272826, 4.6, -1.37998, 0.292519, 3.4677, -1.00837, 0.292519, 5.34728, -1.00837, 0.301018, 3.5, -0.603463, 0.306425, 5.3, -0.611575, 0.396903, 5.45177, -0.904018, 0.449156, 3.88545, -1.42611, 0.6, 3.94852, -1.37737, 0.6, 4.59908, -1.37737, 0.605732, 5.45177, -0.904018, 0.605732, 5.45177, -0.695148, 0.7, 3.53215, -0.616155, 0.7, 5.28962, -0.616155, 0.710177, 3.4677, -1.00837, 0.710177, 5.34728, -1.00837, 0.788957, 4.13026, -1.1, 0.788957, 4.78921, -1.1, 0.796664, 4.8, -0.568925, 0.8, 4.1148, -0.563253, 0.858877, 3.9, -0.804297, 0.866814, 3.88545, -0.904018, 0.866814, 4.45973, -0.590713, 0.914419, 4.4, -0.892122 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( -0.438496, 3.88545, -0.904018, -0.429897, 3.9, -0.804297, -0.4, 4.13586, -1.098, -0.4, 4.13586, -0.588836, -0.4, 4.78361, -1.098, -0.4, 4.78361, -0.588836, -0.33405, 3.4677, -1.00837, -0.33405, 3.4677, -0.590713, -0.33405, 5.34728, -1.00837, -0.33405, 5.34728, -0.590713, -0.229605, 3.88545, -1.42611, -0.229605, 5.45177, -0.904018, -0.229605, 5.45177, -0.695148, -0.2, 4.58076, -1.32542, -0.0731366, 3.88545, -1.42611, 0.0313751, 5.45177, -0.904018, 0.0313751, 5.45177, -0.695148, 0.13582, 3.4677, -1.00837, 0.13582, 3.4677, -0.590713, 0.13582, 5.34728, -1.00837, 0.13582, 5.34728, -0.590713, 0.204992, 4.6, -1.37998, 0.215483, 4.79837, -1.2, 0.216996, 4.8, -0.568925, 0.235083, 4.1, -0.545273, 0.240266, 4.35544, -1.42611 )

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( 0.762389, 1.58808, 0.192417, 0.762389, 1.58808, 0.505752, 0.762389, 1.74468, 0.192417, 0.762389, 1.84904, 0.349084, 0.762389, 1.84904, 0.505752, 0.9713, 1.3792, 0.088002, 0.9713, 1.3792, 0.401246, 0.9713, 1.48367, 0.505752, 0.9713, 1.58808, -0.434071, 0.9713, 1.84904, -0.434071, 0.9713, 1.90133, 0.401246, 1.07559, 1.48367, -0.434071, 1.07559, 1.90133, -0.434071, 1.23221, 1.48367, -0.434071, 1.23221, 1.90133, -0.434071, 1.33673, 1.3792, 0.088002, 1.33673, 1.3792, 0.401246, 1.33673, 1.48367, 0.505752, 1.33673, 1.58808, -0.434071, 1.33673, 1.84904, -0.434071, 1.33673, 1.84904, 0.505752, 1.33673, 1.90133, 0.088002, 1.33673, 1.90133, 0.401246 )

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( 0.86687, 1.84899, -0.590795, 0.86687, 2.00575, -0.903906, 0.86687, 2.00575, -0.590795, 0.9, 0.647549, -0.882831, 0.971316, 0.0738938, -0.747294, 0.971316, 0.0738938, -0.590795, 0.971316, 0.178467, -0.48635, 0.971316, 1.58784, -0.434127, 0.971316, 1.84899, -0.434127, 0.971316, 1.90118, -1.00841, 1, 0.666015, -0.963317, 1.0757, 0.0738938, -0.48635, 1.23226, 1.48327, -0.434127, 1.33665, 0.0738938, -0.747294, 1.33665, 0.0738938, -0.590795, 1.33665, 0.178467, -0.48635, 1.33665, 0.596381, -1.00841, 1.33665, 1.58784, -0.434127, 1.33665, 1.84899, -0.434127, 1.33665, 1.90118, -1.00841, 1.4, 0.659851, -0.877764, 1.44109, 1.84899, -0.590795, 1.44109, 2.00575, -0.903906, 1.44109, 2.00575, -0.590795 )

[sub_resource type="ConvexPolygonShape" id=12]
points = PoolVector3Array( -1.01283, 1.84899, -0.590795, -1, 0.618179, -0.894928, -1, 1.95827, -0.894928, -0.994415, 1.9376, -0.6, -0.908325, 0.0738938, -0.747294, -0.908325, 1.58784, -0.434127, -0.9, 0.619966, -0.993135, -0.9, 1.85537, -0.993135, -0.89923, 0.228518, -0.5, -0.898849, 1.8, -0.451511, -0.803921, 1.48327, -0.434127, -0.702651, 0.130021, -0.5, -0.604694, 1.8, -0.451511, -0.604313, 0.228518, -0.5, -0.6, 0.609933, -0.999631, -0.6, 1.87485, -0.999631, -0.595214, 0.0738938, -0.747294, -0.595214, 1.58784, -0.434127, -0.509176, 1.9376, -0.6, -0.5, 0.612079, -0.89744, -0.5, 1.97156, -0.89744, -0.490759, 1.84899, -0.590795 )

[sub_resource type="ConvexPolygonShape" id=13]
points = PoolVector3Array( 0.236126, 3.3, -0.335423, 0.236126, 3.3, 0.822999, 0.245149, 4.1, -0.52993, 0.260589, 3.4169, 0.9, 0.260812, 5.46925, 1.1, 0.261873, 5.46746, -0.5, 0.261932, 3.42044, -0.4, 0.261932, 5.56725, -0.4, 0.26344, 5.66397, 0.2, 0.272888, 5.4, 1.17852, 0.303209, 5.78954, 0.4, 0.31253, 5.76542, 0.1, 0.449238, 3.88585, 1.13229, 0.76221, 6.02611, -0.0161468, 0.76221, 6.02611, 0.140593, 0.9, 3.96669, 1.05143, 0.906954, 3.4, -0.285415, 0.906954, 3.4, 0.78838, 0.918843, 6.02611, 0.140593, 0.979203, 4.58061, 1.1, 1, 3.47017, -0.370156, 1, 3.47017, 0.876559, 1, 5.38747, 1.1643, 1.00473, 3.4, -0.18762, 1.00473, 3.4, 0.690747, 1.1, 3.45641, -0.281401, 1.1, 3.45641, 0.785601, 1.1, 5.39572, -0.475431, 1.1, 5.39572, 1.07665, 1.1, 5.54137, -0.378416, 1.2, 5.4493, -0.383055, 1.2, 5.4493, 0.593117, 1.2323, 4.25124, 0.245028, 1.2323, 4.46011, -0.538496, 1.2323, 4.61663, -0.538496 )

[sub_resource type="ConvexPolygonShape" id=14]
points = PoolVector3Array( -0.908407, 3.46811, 0.401685, -0.908407, 4.04237, 0.297005, -0.908407, 4.04237, 0.401685, -0.803952, 4.46011, -0.538496, -0.803952, 4.61663, -0.538496, -0.785946, 5.47168, -0.4, -0.773709, 5.44993, 0.6, -0.751555, 3.36368, -0.329523, -0.7, 5.35469, 1.04832, -0.647212, 3.36368, -0.434009, -0.647212, 3.36368, 0.923145, -0.542869, 6.02611, -0.0162592, -0.542869, 6.02611, 0.140276, -0.438301, 5.2948, 1.44558, -0.438301, 5.45131, 1.44558, -0.38613, 6.02611, -0.0162592, -0.38613, 6.02611, 0.140276, 0.1, 5.39168, 1.36997, 0.13581, 5.2948, 1.44558, 0.13581, 5.81697, 0.401685, 0.2026, 5.4, 1.18525, 0.211959, 3.428, 0.9, 0.213082, 5.46415, 1.1, 0.217979, 5.47127, -0.5, 0.218258, 3.41369, -0.4, 0.218258, 5.57211, -0.4, 0.223804, 5.68262, 0.2, 0.234723, 4.1, -0.528922, 0.245171, 3.3, -0.336212, 0.245171, 3.3, 0.821777 )

[sub_resource type="ConvexPolygonShape" id=15]
points = PoolVector3Array( 0.762389, 3.31106, -0.329626, 0.768703, 3.29122, 0.9, 0.774356, 2.2, -0.292016, 0.774356, 2.2, 0.781397, 0.775284, 2.3, -0.386177, 0.775284, 2.3, 0.875557, 0.814658, 3.10204, -0.434071, 0.814658, 3.31106, 0.923451, 0.919052, 3.31106, -0.329626, 1.02345, 2.16239, -0.329626, 1.02345, 2.16239, 0.819006, 1.02345, 2.26684, -0.434071, 1.02345, 2.26684, 0.923451, 1.02345, 2.63249, -0.434071, 1.02345, 2.63249, 0.923451, 1.02345, 3.31106, 0.714561, 1.12788, 2.26684, -0.329626, 1.12788, 2.26684, 0.819006, 1.12788, 2.63249, -0.329626, 1.12788, 2.63249, 0.819006, 1.12788, 3.31106, -0.120735, 1.12788, 3.31106, 0.34887 )

[sub_resource type="ConvexPolygonShape" id=16]
points = PoolVector3Array( -0.438496, 1.58835, 0.192733, -0.438496, 2.26658, -0.434071, -0.438496, 2.26658, 0.923451, -0.425449, 1.60253, 0.5, -0.418625, 3.27565, 0.8, -0.4, 3.24245, -0.390554, -0.3, 1.63294, -0.0957679, -0.3, 3.23795, 0.877076, -0.2, 1.54104, -0.0932025, -0.2, 1.63752, -0.189778, -0.0206073, 1.17077, 0.766784, -0.0206073, 1.17077, 0.923451, 0.344501, 3.31106, -0.434071, 0.449003, 1.17077, 0.766784, 0.449003, 1.17077, 0.923451, 0.580406, 1.52696, -0.1, 0.581804, 1.62333, -0.2, 0.678867, 1.62538, -0.1, 0.741644, 3.27409, 0.9, 0.749343, 1.60253, 0.5, 0.762389, 2.16266, -0.329626, 0.762389, 2.26658, -0.434071, 0.762389, 2.26658, 0.923451, 0.812291, 3.4, -0.377356 )

[sub_resource type="SphereShape" id=17]
radius = 2.3979

[node name="ReconBot" type="KinematicBody" groups=[
"Enemies",
]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 3 )

[node name="ReconBot" type="MeshInstance" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape16" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 1 )

[node name="CollisionShape15" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 2 )

[node name="CollisionShape14" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 3 )

[node name="CollisionShape13" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 4 )

[node name="CollisionShape12" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 5 )

[node name="CollisionShape11" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 6 )

[node name="CollisionShape10" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 7 )

[node name="CollisionShape9" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 8 )

[node name="CollisionShape8" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 9 )

[node name="CollisionShape7" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 10 )

[node name="CollisionShape6" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 11 )

[node name="CollisionShape5" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 12 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 13 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 14 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -8.14603e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -8.14603e-08, 0, 2.01039, 0 )
shape = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="DamageArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.976398, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DamageArea"]
shape = SubResource( 17 )

[node name="SparkParticles" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.489999, 3.99964, 0.38828 )
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
